# TeacherHelper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.txt  runCodeCoverage.sh  runUnitTests.sh
.github/workflows/: cmake.yml
Controllers/: CMakeLists.txt
Controllers/include/: IDatabaseController.h  IStudentController.h  assessmentController.h  cityController.h  classController.h  databaseController.h  schoolController.h  studentController.h  studentSelectionController.h  subjectController.h  testController.h  testTypeController.h
Controllers/src/: assessmentController.cpp  cityController.cpp  classController.cpp  databaseController.cpp  schoolController.cpp  studentController.cpp  studentSelectionController.cpp  subjectController.cpp  testTypeController.cpp
Controllers/test/: CMakeLists.txt  assessmentController_unittest.cpp  cityController_unittest.cpp  classController_unittest.cpp  databaseController_unittest.cpp  fakeDatabaseConnection.h  fakeDatabaseController.h  fakeStudentStorage.h  schoolController_unittest.cpp  studentController_unittest.cpp  studentSelectionController_unittest.cpp  subjectController_unittest.cpp  testTypeController_unittest.cpp
DataServices/: CMakeLists.txt
DataServices/include/: IDatabaseConnection.h  IDatabaseConnectionFactory.h  IDatabaseManagementOperations.h  IDatabaseOperations.h  IFileSystemOperations.h  IManagementItemStorage.h  IStorageDDLOperation.h  IStorageDeleteOperation.h  IStorageInsertOperation.h  IStorageOperationFactory.h  IStorageSelectOperation.h  IStorageUpdateOperation.h  ManagementItemStorageBase.h  assessmentStorage.h  cityStorage.h  classStorage.h  databaseConnection.h  databaseConnectionFactory.h  databaseManagementOperations.h  databaseVersionStorage.h  fileSystemOperations.h  libraryCurrentVersion.h  operationBase.h  queryResult.h  schoolStorage.h  sqliteDDLOperation.h  sqliteDatabaseOperations.h  sqliteDateTime.h  sqliteDateTimeFactory.h  sqliteDeleteOperation.h  sqliteInsertOperation.h  sqliteOperationFactory.h  sqliteSelectOperation.h  sqliteUpdateOperation.h  studentStorage.h  subjectStorage.h  testTypeStorage.h
DataServices/src/: assessmentStorage.cpp  cityStorage.cpp  classStorage.cpp  databaseConnection.cpp  databaseConnectionFactory.cpp  databaseManagementOperations.cpp  databaseVersionStorage.cpp  fileSystemOperations.cpp  schoolStorage.cpp  sqliteDDLOperation.cpp  sqliteDatabaseOperations.cpp  sqliteDateTime.cpp  sqliteDateTimeFactory.cpp  sqliteDeleteOperation.cpp  sqliteInsertOperation.cpp  sqliteOperationFactory.cpp  sqliteSelectOperation.cpp  sqliteUpdateOperation.cpp  studentStorage.cpp  subjectStorage.cpp  testTypeStorage.cpp
DataServices/test/: CMakeLists.txt  FakeDeleteOperation.h  FakeSelectOperation.h  cityStorage_unittest.cpp  classStorage_unittest.cpp  sqliteDateTimeFactory_unittest.cpp  sqliteDateTime_unittest.cpp  studentStorage_unittest.cpp  subjectStorage_unittest.cpp
DataServices/test/integration tests/: CMakeLists.txt  cityCRUD_integrationtest.cpp
DataServices/test/unit tests/: CMakeLists.txt  FakeDDLOperation.h  FakeDatabaseConnection.h  FakeDatabaseConnectionFactory.h  FakeDatabaseOperations.h  FakeDeleteOperation.h  FakeFileSystemOperations.h  FakeInsertOperation.h  FakeOperationFactory.h  FakeOperationResult.h  FakeOperationResultFactory.h  FakeSelectOperation.h  FakeUpdateOperation.h  assessmentStorage_unittest.cpp  cityStorage_unittest.cpp  classStorage_unittest.cpp  databaseConnection_unittest.cpp  databaseManagementOperations_unittest.cpp  databaseVersionStorage_unittest.cpp  schoolStorage_unittest.cpp  sqliteDateTimeFactory_unittest.cpp  studentStorage_unittest.cpp  subjectStorage_unittest.cpp  testTypeStorage_unittest.cpp
DatabaseService/: CMakeLists.txt
DatabaseService/include/: databaseConnection.h
DatabaseService/src/: databaseConnection.cpp
DatabaseService/test/: CMakeLists.txt  databaseConnection_unittest.cpp
Models/: CMakeLists.txt
Models/doc/: ClassDiagram.dia
Models/include/: assessment.h  assessmentResult.h  city.h  class.h  school.h  student.h  subject.h  testResult.h  testType.h  version.h
Models/src/: assessment.cpp  assessmentResult.cpp  city.cpp  class.cpp  school.cpp  student.cpp  subject.cpp  testResult.cpp  testType.cpp  version.cpp
Models/test/: CMakeLists.txt  assessmentResult_unittest.cpp  assessment_unittest.cpp  city_unittest.cpp  class_unittest.cpp  school_unittest.cpp  student_unittest.cpp  subject_unittest.cpp  testResult_unittest.cpp  testType_unittest.cpp  version_unittest.cpp
TeacherHelper/: CMakeLists.txt
TeacherHelper/res/: TeacherHelperIcon256.icns  global.qrc  global.rc  resource.h
TeacherHelper/res/reports/: MultiAssessmentSummary.html
TeacherHelper/src/: IReportData.h  aboutBoxForm.cpp  aboutBoxForm.h  aboutBoxForm.ui  cityManagementForm.cpp  cityManagementForm.h  cityManagementForm.ui  classAssessmentsSummaryReportForm.cpp  classAssessmentsSummaryReportForm.h  classAssessmentsSummaryReportForm.ui  classAssessmentsSummaryReportStudentPrecisionForm.cpp  classAssessmentsSummaryReportStudentPrecisionForm.h  classAssessmentsSummaryReportStudentPrecisionForm.ui  classManagementForm.cpp  classManagementForm.h  classManagementForm.ui  configurationManager.cpp  editAssessmentForm.cpp  editAssessmentForm.h  editAssessmentForm.ui  htmlReport.cpp  htmlReport.h  imageAttributionsForm.cpp  imageAttributionsForm.ui  main.cpp  mainForm.cpp  mainForm.h  mainForm.ui  managementFormBase.cpp  managementFormBase.h  multiAssessmentReportData.h  qDateConverter.cpp  qDateConverter.h  reportLoadingResult.h  schoolManagementForm.cpp  schoolManagementForm.h  schoolManagementForm.ui  specialFolders.cpp  studentManagementForm.cpp  studentManagementForm.h  (+13 more)
cmake/modules/: Conan.cmake
doc/: ClassDiagram.dia
src/: main.cpp  mainForm.cpp  mainForm.h  mainForm.ui  ui_mainForm.h
src/service/: databaseConnection.cpp  databaseConnection.h
test/service/: databaseConnection_unittest.cpp
